--- a/app/views/appointments/_index.html.erb
+++ b/app/views/appointments/_index.html.erb
@@ -1,4 +1,4 @@
-<h3 style="text-align: center;color:#06367B;">VIEW APPOINTMENT</h3>
+<h3 style="text-align: center;color:#06367B;">APPOINTMENTS</h3>
 <hr>
 <table class="table table-bordered table-striped">
   <tr style="color:#06367B;">
