--- a/app/assets/stylesheets/patients.css.scss
+++ b/app/assets/stylesheets/patients.css.scss
@@ -4,5 +4,11 @@
 #header{
   margin-left: 525px;
   width: 316px;
-  background-color: deepskyblue;
+  background-color: #BECFFB;
+}
+
+#header-title{
+  margin-left: 525px;
+  width: 316px;
+  background-color: #BECFFB;
 }
