--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,15 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
 </head>
+<div style=" height: 50px;background-color: #BECFFB;">
+  <div id="header-title"><b><h2>Hospital Counselling </h2></b></div>
+</div>
 <body>
 
 <%= yield %>
 
 </body>
+<div id-="footer" style="height: 50px;background-color: #BECFFB"><div style="float:right;margin-right:50px;margin-top:10px;">Copyrights@2014</div></div>
 </html>
